--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,41 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap");
 @import "tailwindcss";
 @config "../tailwind.config.cjs";
+
+@font-face {
+  font-family: "JetBrains Mono";
+  src: url("/fonts/JetBrainsMono-Regular.woff2") format("woff2"),
+    url("/fonts/JetBrainsMono-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "JetBrains Mono";
+  src: url("/fonts/JetBrainsMono-SemiBold.woff2") format("woff2"),
+    url("/fonts/JetBrainsMono-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "JetBrains Mono";
+  src: url("/fonts/JetBrainsMono-Italic.woff2") format("woff2"),
+    url("/fonts/JetBrainsMono-Italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "JetBrains Mono";
+  src: url("/fonts/JetBrainsMono-SemiBoldItalic.woff2") format("woff2"),
+    url("/fonts/JetBrainsMono-SemiBoldItalic.woff") format("woff");
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
 
 * {
   box-sizing: border-box;
@@ -38,6 +73,8 @@ body,
     --radius: 0.75rem;
     --uml-class-bg: #fdf2cc;
     --uml-class-border: hsl(var(--foreground) / 0.2);
+    --uml-class-invalid-bg: #fff1dd;
+    --uml-class-invalid-border: hsl(36 85% 45% / 0.55);
   }
 
   body {
