added more example projects and fixed a bug where viewport was not saved in unimozer.json

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-@import "tailwindcss";
+@import "tailwindcss" source(none);
 @config "../tailwind.config.cjs";
+@source "../index.html";
+@source "./**/*.{ts,tsx}";
 
 @font-face {
   font-family: "JetBrains Mono";
